--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/bed.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SleepIn</title>
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="/bed.png" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
